# mulle-objc-runtime

./: .ackrc  .gitattributes  .gitignore  .gitmodules  .touch  .travis.yml  AGENTS.md  CMakeDependencies.txt  CMakeLists.txt  CMakeSourcesAndHeaders.txt  LICENSE  README.md  RELEASENOTES.md  clib.json  mulle-objc-reverse-uniqueid.sh  mulle-objc-runtime.code-workspace  mulle-objc-runtime.sublime-project  mulle-objc-runtime.sublime-workspace  mulle-objc-selector.sh  package.json
.bootstrap/: MULLE_REPOSITORIES  embedded_repositories  repositories
.github/workflows/: cmake-errors.yml  mulle-sde-ci.i686.yml  mulle-sde-ci.yml  semgrep.yml
.mulle-env/etc/: environment-global.sh  environment-user-nat.sh  optionaltool
.mulle-env/share/: environment-aux.sh  environment-extension.sh  environment-global.sh  environment-plugin.sh  environment-project.sh  environment-share.sh  environment.sh  include-environment.sh  optionaltool  style  tool
.mulle-sde/share/: extension
.mulle-sourcetree/etc/: config
.travis.d/: PACKAGES  before_install  before_install-aux.darwin  before_install-aux.linux  before_install.darwin  before_install.linux  script
assets/dox/: TOC.md
book/: appendix-a-data-structure-layouts.md  appendix-b-encoding.md  chapter0-introduction.md  chapter1-fundamentals.md  chapter10-advanced-topics.md  chapter10-universe-configuration.md  chapter11-universe-configuration.md  chapter2-class-system.md  chapter3-ivar-system.md  chapter4-method-system.md  chapter5-property-system.md  chapter6-protocol-system.md  chapter7-object-system.md  chapter8-call-mechanism.md  chapter9-advanced-topics.md  chapter9-runtime-loading.md
cmake/: CCompiler.cmake  DependenciesAndLibraries.cmake  Headers.cmake  HeadersAndSources.cmake  README.md  Sources.cmake  _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cmake/share/: AllLoad.cmake  AllLoadC.cmake  CMakeTweaks.cmake  CMakeTweaksC.cmake  CompilerDetection.cmake  CompilerDetectionC.cmake  CompilerFlags.cmake  CompilerFlagsC.cmake  CompilerWarningsC.cmake  Dependencies.cmake  DependenciesAndLibraries.cmake  Environment.cmake  Executable.cmake  ExecutableAux.cmake  FallbackEnvironment.cmake  Files.cmake  FinalOutput.cmake  FinalOutputC.cmake  Framework.cmake  FrameworkAux.cmake  Headers.cmake  IDESupport.cmake  InstallCMakeInclude.cmake  InstallCMakePackage.cmake  InstallExecutable.cmake  InstallFramework.cmake  InstallLibrary.cmake  InstallRpath.cmake  Library.cmake  LibraryAux.cmake  LinkManifest.cmake  LinkManifestC.cmake  MacOSXFrameworkInfo.plist.in.sample  Motd.cmake  MultiPhase.cmake  PostExecutable.cmake  PostFiles.cmake  PostFramework.cmake  (+17 more)
cola/: add.md.bud  api.md.bud  description.md.bud  info.md.bud  properties.plist  usage.md.bud
dox/: API_CLASS.md  API_EXCEPTION.md  API_GLOBAL.md  API_IVAR.md  API_LOADINFO.md  API_METHOD.md  API_OBJECT.md  API_PROPERTY.md  API_RUNTIME.md  API_SIGNATURE.md  API_UNIVERSE.md  API_VARARG.md  BUILD.md  DEBUGGING.md  TAO-Check.md  USE.md  global_runtime.dot  mulle-objc-runtime-dependencies.dot  thread_local_runtime.dot
mulle-objc-runtime.xcodeproj/: project.pbxproj
mulle-objc.xcodeproj/: project.pbxproj
mulle-project/: version-info.sh
research-cache-spread/: main.c  mt19937ar.h
research.xcodeproj/: project.pbxproj
src/: _mulle-objc-runtime-dependencies.h  _mulle-objc-runtime-include-private.h  _mulle-objc-runtime-include.h  calls.md  dependencies.h  include-private.h  include.h  minimal.h  mulle-metaabi.h  mulle-objc-atomicpointer.h  mulle-objc-builtin.h  mulle-objc-c-types.h  mulle-objc-cache.c  mulle-objc-cache.h  mulle-objc-call.c  mulle-objc-call.h  mulle-objc-callqueue.c  mulle-objc-callqueue.h  mulle-objc-class-convenience.h  mulle-objc-class-impcache.c  mulle-objc-class-impcache.h  mulle-objc-class-initialize.c  mulle-objc-class-initialize.h  mulle-objc-class-lookup.c  mulle-objc-class-lookup.h  mulle-objc-class-search.c  mulle-objc-class-search.h  mulle-objc-class-struct.h  mulle-objc-class-universe.c  mulle-objc-class-universe.h  mulle-objc-class.c  mulle-objc-class.h  mulle-objc-classpair.c  mulle-objc-classpair.h  mulle-objc-csvdump.c  mulle-objc-csvdump.h  mulle-objc-fastclasstable.h  mulle-objc-fastenumeration.c  mulle-objc-fastenumeration.h  mulle-objc-fastmethodtable.c  (+160 more)
templates/: README.md  README.md.scion  _wrapper.scion
test/: include.h
test-compiler/: README.md  import.h
test-compiler-runtime/: .gitignore  README.md  include.h
test-compiler-runtime/0_runtime/load-categories/: Base+C1.m  Base+C2.m  Base.h  Base.m  CMakeLists.txt  Foo+C1.m  Foo+C2.m  Foo+C3.m  Foo.m  ProtoClass1.m  ProtoClass2.m  load-categories.stdout  main.m
test-compiler-runtime/0_runtime/load-classes/: Base.m  CMakeLists.txt  Foo1.h  Foo1.m  Foo2.m  Foo3.m  ProtoClass1.m  Root.h  Root.m  load-classes.stdout  main.m
test-compiler-runtime/load-categories/: Base+C2.m  CMakeLists.txt  Foo+C1.m  Foo.h  Foo.m  ProtoClass1.h  Root.m  main.m
test-compiler-runtime/load-classes/: CMakeLists.txt  Foo2.h  Foo3.h  Foo3.m  Proto1.h  Proto2.h  ProtoClass2.h  ProtoClass2.m
test-compiler/metaabi/unwanted-promotion/: CMakeLists.txt  functions.c  main.m
test-debugger/: .travis.yml  README.md
test-startup/: include.h
test-startup/methods/inheritance/: CMakeLists.txt  create-f.sh  main.c  pointerarray.h  test_category_inheritance.c  test_class_simple.c  test_message_forwarding.c  test_message_sending.c  test_method.c  test_protocol_inheritance.c  test_retain_release.c  test_runtime_ids.h  test_simple_inheritance.c
tests/: TODO.md  build-test.sh  run-all-tests.sh  run-test.sh
tests/methods/inheritance/: CMakeLists.txt  Makefile  create-f.sh  f.c  main.c  pointerarray.h  test_category_inheritance.c  test_class_simple.c  test_message_forwarding.c  test_message_sending.c  test_method.c  test_protocol_inheritance.c  test_retain_release.c  test_runtime_ids.h  test_simple_inheritance.c  test_simple_inheritance.h
tests/methods/inheritance/inheritance.xcodeproj/: project.pbxproj
(+861 files in other folders)
